@@ -3,6 +3,7 @@ package com.projectwork.Smart.Parking.System.security;
 import com.projectwork.Smart.Parking.System.config.ApiConstant;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -12,10 +13,8 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -37,13 +36,20 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
                 .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
                         .requestMatchers(ApiConstant.AUTH_BASE + "/**").permitAll()
                         .requestMatchers(ApiConstant.HEALTH_BASE).permitAll()
+                        .requestMatchers(HttpMethod.GET,
+                                ApiConstant.PAYMENT_BASE + ApiConstant.PAYMENT_KHALTI_VERIFY).permitAll()
+
                         .requestMatchers(ApiConstant.VENDOR_BASE + "/**").hasRole("VENDOR")
                         .requestMatchers(ApiConstant.ADMIN_BASE + "/**").hasRole("ADMIN")
+
                         .requestMatchers(ApiConstant.BOOKING_BASE + "/**").authenticated()
                         .requestMatchers(ApiConstant.PARKING_BASE + "/**").authenticated()
                         .requestMatchers(ApiConstant.PAYMENT_BASE + "/**").authenticated()
+
                         .anyRequest().permitAll()
                 )
 
@@ -56,26 +62,42 @@ public class SecurityConfig {
         return http.build();
     }
 
- @Bean
- public PasswordEncoder passwordEncoder() {
-       return new BCryptPasswordEncoder(12);
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12);
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+
         configuration.setAllowedOrigins(List.of(
                 "http://localhost:3000",
                 "http://localhost:5173",
                 "http://localhost:4200"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        configuration.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+        ));
+
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept"
+        ));
+
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
